deploy/gateway-dev.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: meepo-gateway
  namespace: meepo-dev
spec:
  gatewayClassName: gke-l7-regional-external-managed
  listeners:
  - name: meepoapi-xyz-dev-https
    protocol: HTTPS
    port: 443
    hostname: "dev.meepoapi.xyz"
    allowedRoutes:
      namespaces:
        from: Same
    tls:
      mode: Terminate
      certificateRefs:
      - name: meepoapi-xyz-tls
        namespace: meepo-dev
  - name: meepoapi-xyz-gli-https
    protocol: HTTPS
    port: 443
    hostname: "gli.meepoapi.xyz"
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: meepoapi-xyz-tls
        namespace: meepo-dev
  - name: meepoapi-xyz-prediction-https
    protocol: HTTPS
    port: 443
    hostname: "prediction.meepoapi.xyz"
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: meepoapi-xyz-tls
        namespace: meepo-dev
  - name: hicasino-xyz-dev-https
    protocol: HTTPS
    port: 443
    hostname: "dev.hicasino.xyz"
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: hicasino-xyz-tls
        namespace: meepo-dev
  - name: meepoadmin-site-https
    protocol: HTTPS
    port: 443
    hostname: "dify.meepoadmin.site"
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: meepoadmin-site-tls
        namespace: meepo-dev
  addresses:
  - type: NamedAddress
    value: gke-meepo-dev-ingress-ip
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-stg-to-dev-gateway
  namespace: meepo-dev
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: meepo-stg
  to:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: meepo-gateway
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-invoker-to-dev-gateway
  namespace: meepo-dev
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: invoker-dev
  to:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: meepo-gateway
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-oracle-to-dev-gateway
  namespace: meepo-dev
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: oracle-dev
  to:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: meepo-gateway
