deploy/gateway-stg.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: meepo-gateway
  namespace: meepo-gateway
spec:
  gatewayClassName: gke-l7-regional-external-managed
  listeners:
  # - name: meepoapi-xyz-dev-https
  #   protocol: HTTPS
  #   port: 443
  #   hostname: "dev.meepoapi.xyz"
  #   allowedRoutes:
  #     namespaces:
  #       from: All
  #   tls:
  #     mode: Terminate
  #     certificateRefs:
  #     - name: meepoapi-xyz-tls
  #       namespace: meepo-dev
  - name: meepoapi-xyz-stg-https
    protocol: HTTPS
    port: 443
    hostname: "stg.meepoapi.xyz"
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: meepoapi-xyz-tls
  addresses:
  - type: NamedAddress
    value: meepo-gke-ingress-ip
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-meepo-stg
  namespace: meepo-stg
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: meepo-stg
  to:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: meepo-gateway
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-meepo-dev
  namespace: meepo-dev
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: meepo-dev
  to:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: meepo-gateway
