deploy/httproute-oracle-dev.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: oracle-routes
  namespace: oracle-dev
spec:
  parentRefs:
  - name: meepo-gateway
    namespace: meepo-dev
  hostnames:
  - "prediction.meepoapi.xyz"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/connection"
    backendRefs:
    - name: centrifugo-svc
      namespace: oracle-dev
      port: 8000
      weight: 1
  - matches:
    - path:
        type: PathPrefix
        value: "/v1"
    - path:
        type: PathPrefix
        value: "/sessions"
    backendRefs:
    - name: oracle-service-svc
      namespace: oracle-dev
      port: 8000
      weight: 1
