deploy/httproute-prod.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: apiport-xyz-routes
  namespace: meepo
spec:
  parentRefs:
  - name: meepo-gateway
    namespace: meepo-gateway
  hostnames:
  - "apiport.xyz"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/v1/user"
    backendRefs:
    - name: user-svc
      port: 8000
      weight: 1
  - matches:
    - path:
        type: PathPrefix
        value: "/v1/operator"
    backendRefs:
    - name: operator-svc
      port: 8000
      weight: 1
  - matches:
    - path:
        type: PathPrefix
        value: "/v1/system"
    backendRefs:
    - name: system-svc
      port: 8000
      weight: 1
  - matches:
    - path:
        type: PathPrefix
        value: "/v1/game"
    backendRefs:
    - name: game-svc
      port: 8000
      weight: 1
  - matches:
    - path:
        type: PathPrefix
        value: "/v1/payment"
    backendRefs:
    - name: payment-svc
      port: 8000
      weight: 1
  - matches:
    - path:
        type: PathPrefix
        value: "/v1/wallet"
    backendRefs:
    - name: wallet-svc
      port: 8000
      weight: 1
  - matches:
    - path:
        type: PathPrefix
        value: "/v1/backoffice"
    backendRefs:
    - name: backoffice-svc
      port: 8000
      weight: 1
  - matches:
    - path:
        type: PathPrefix
        value: "/connection"
    backendRefs:
    - name: centrifugo-svc
      port: 8000
      weight: 1
  - matches:
    - path:
        type: PathPrefix
        value: "/v1/bcpay"
    backendRefs:
    - name: bcpay-svc
      port: 8000
      weight: 1
  - matches:
    - path:
        type: PathPrefix
        value: "/v1/review"
    backendRefs:
    - name: review-svc
      port: 8000
      weight: 1
  - matches:
    - path:
        type: PathPrefix
        value: "/v1/affiliate"
    backendRefs:
    - name: affiliate-svc
      port: 8000
      weight: 1
  - matches:
    - path:
        type: PathPrefix
        value: "/v1/jackpot"
    backendRefs:
    - name: jackpot-svc
      port: 8000
      weight: 1
  - matches:
    - path:
        type: PathPrefix
        value: "/v1/push/otp/providers"
    backendRefs:
    - name: push-svc
      port: 8000
      weight: 1
  - matches:
    - path:
        type: PathPrefix
        value: "/v1/push/telegram/webhook"
    backendRefs:
    - name: push-svc
      port: 8000
      weight: 1
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: paapi-xyz-routes
  namespace: alchemist
spec:
  parentRefs:
  - name: meepo-gateway
    namespace: meepo-gateway
  hostnames:
  - "paapi.xyz"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    backendRefs:
    - name: alchemist-service
      port: 8080
      weight: 1
